WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275074
[WebGPU] Buffer binding size check does not take into account dynamic offsets
https://bugs.webkit.org/show_bug.cgi?id=275074
Summary
[WebGPU] Buffer binding size check does not take into account dynamic offsets
Mike Wyrzykowski
Reported
2024-06-03 13:54:39 PDT
[WebGPU] Buffer binding size check does not take into account dynamic offsets
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-03 13:54:52 PDT
radar://129160209
Mike Wyrzykowski
Comment 2
2024-06-03 14:23:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29473
EWS
Comment 3
2024-06-04 09:14:49 PDT
Committed
279703@main
(989a254307fc): <
https://commits.webkit.org/279703@main
> Reviewed commits have been landed. Closing PR #29473 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug