[WebGPU] Buffer binding size check does not take into account dynamic offsets https://bugs.webkit.org/show_bug.cgi?id=275074 <radar://129160209>

Reviewed by Dan Glastonbury.

Buffer bindings must be large enough when the dynamic offset is taken into
account as well.

* LayoutTests/fast/webgpu/fuzz-126711484-expected.txt:
* LayoutTests/fast/webgpu/fuzz-126848520-explicit-layout-expected.txt:
* LayoutTests/fast/webgpu/fuzz-128381161-expected.txt:
* LayoutTests/fast/webgpu/fuzz-128396311-expected.txt:
* LayoutTests/fast/webgpu/fuzz-128677742-expected.txt:
* LayoutTests/fast/webgpu/fuzz-272863-expected.txt:
* LayoutTests/fast/webgpu/fuzz-272903-expected.txt:
* LayoutTests/fast/webgpu/fuzz-272911-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273017-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273021-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273023-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273323-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273503-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273505-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273566-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273570-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273573-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273578-expected.txt:
* LayoutTests/fast/webgpu/fuzz-273585-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274161-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274171-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274270-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274271-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274275-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274289-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274290-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274317-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274334-expected.txt:
* LayoutTests/fast/webgpu/fuzz-274622-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_274706-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_274706b-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_274706c-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_275071-expected.txt:
* LayoutTests/fast/webgpu/regression/repro_275074-expected.txt: Copied from LayoutTests/fast/webgpu/regression/repro_274706-expected.txt.
* LayoutTests/fast/webgpu/regression/repro_275074.html: Added.
Add regression test and update existing expectations due to new error message.

* Source/WebGPU/WebGPU/BindGroup.h:
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):
(WebGPU::BindGroup::BindGroup):
(WebGPU::BindGroup::dynamicOffset const):
* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::executePreDispatchCommands):
* Source/WebGPU/WebGPU/Pipeline.h:
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::errorValidatingBindGroup):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executePreDrawCommands):

Canonical link: https://commits.webkit.org/279703@main